Fix YouTube placeholder on firefox

--- a/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.scss
+++ b/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.scss
@@ -1,5 +1,6 @@
 :host {
   cursor: pointer;
+  display: block;
   position: relative;
   width: 100%;
 }
